--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.6",
+    "@astrojs/node": "^8.2.3",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.3.4",
     "astro": "^4.4.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
